# FitTrack

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  PRODUCT_PLAN.md  README.md  docker-compose.yml  listMAF.ps1  listMAF2.ps1  listTypesMetaLoad.ps1  listTypesMetadata.ps1  start-fittrack-dev.ps1
.github/workflows/: docker.yml
FitTrack/: FitTrack.sln
FitTrack.AgentHost.Python/: README.md  pyproject.toml
FitTrack.AgentHost.Python/app/: __init__.py  agent_runtime.py  internal_tools.py  main.py  models.py  orchestrator.py  settings.py  trace_store.py
FitTrack.AgentHost.Python/tests/: test_orchestrator.py
FitTrack.Web/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
FitTrack/FitTrack.Copilot/: Dockerfile  FitTrack.Copilot.csproj  Program.cs  SystemArchitecture.md  appsettings.json
FitTrack/FitTrack.Copilot.XiaomiSmokeTest/: FitTrack.Copilot.XiaomiSmokeTest.csproj  Program.cs  README.md
FitTrack/FitTrack.React/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.e2e-env.ts  playwright.global-setup.ts  playwright.global-teardown.ts  test-login.mjs  tsconfig.json
docs/: fitness-agent-chat-prototype.md  fittrack_agent_prd.md  fittrack_agent_prd_zh.md  fittrack_meai_sk_maf_blueprint.md  fittrack_meai_sk_maf_blueprint_zh.md  food_calorie_module_zh.md  muscle-gain-agent-tech-one-pager.md  muscle-gain-agent-weekly-dev-design.md  production.md  system_architecture_v2.md
tasks/: task1.md
(+376 files in other folders)
