[project]
name = "fittrack-agenthost-python"
version = "0.1.0"
description = "Python sidecar agent host for FitTrack.Copilot"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "agent-framework-core==1.0.0",
  "agent-framework-openai==1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
